--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@chelseawagner/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "This package is a replica of Lodash, called Lotide",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/Wagsnerlund/lotide.git"
   },
-  "author": "",
+  "author": "Chelsea Wagner <chelseawagner17@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Wagsnerlund/lotide/issues"
